# quicKFS

./: .b.md.swp  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  b.md  c.md  roadmap-new.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
clients/linux/: README.md
clients/macos/: README.md
clients/macos/client-cli/: Cargo.toml
clients/macos/client-cli/src/: main.rs
clients/macos/client-gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
clients/macos/client-gui/public/: theme-init.js
clients/macos/client-gui/src/: App.svelte  app.css  main.ts
clients/macos/client-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/macos/client-gui/src-tauri/capabilities/: default.json
clients/macos/client-gui/src-tauri/icons/: icon.icns
clients/macos/client-gui/src-tauri/src/: main.rs
clients/macos/client-gui/src/lib/: pairing-code.ts  theme.ts
clients/macos/filesystem-macfuse/: Cargo.toml
clients/macos/filesystem-macfuse/src/: lib.rs  main.rs  native.rs
clients/windows/: README.md
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/client-core/: Cargo.toml
crates/client-core/src/: cached.rs  lib.rs  resilient.rs  trust.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/macos-support/: Cargo.toml
crates/macos-support/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server-core/: Cargo.toml
crates/server-core/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/transport-quic/: Cargo.toml
crates/transport-quic/src/: lib.rs
docs/: README.md  authentication.md  caching.md  development.md  filesystem-semantics.md  protocol-spec.md  protocol.md  roadmap.md  setup.md  threat-model.md  troubleshooting.md  usage.md
scripts/: check.sh  dev-cert.sh  media-workload-smoke.py  test.sh
servers/linux/: README.md
servers/linux/server-daemon/: Cargo.toml
servers/linux/server-daemon/src/: main.rs
servers/macos/: README.md
servers/windows/: README.md
