[workspace]
resolver = "2"
members = [
  "crates/*",
  "clients/macos/client-cli",
  "clients/macos/client-gui/src-tauri",
  "clients/macos/filesystem-macfuse",
  "servers/linux/server-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/quickfs/quickfs"
publish = false

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures = "0.3"
fuser = "0.17"
hex = "0.4"
hmac = "0.12"
postcard = { version = "1", default-features = false, features = ["alloc"] }
quinn = "0.11"
rcgen = "0.14"
rpassword = "7"
rustix = { version = "1", features = ["process"] }
rustls = "0.23"
rustls-platform-verifier = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[patch.crates-io]
# fuser 0.17 calls libfuse's obsolete API-25 mount entry point on macOS.
# macFUSE 5.3 requires the current channel-based mount API instead.
fuser = { path = "vendor/fuser" }
