[package]
name="quickfs-cache"
version.workspace=true
edition.workspace=true
license.workspace=true
publish.workspace=true
[dependencies]
async-trait.workspace=true
dashmap.workspace=true
hex.workspace=true
quickfs-protocol={path="../protocol"}
rustix={workspace=true,features=["fs"]}
serde.workspace=true
serde_json.workspace=true
sha2.workspace=true
thiserror.workspace=true
[lints]
workspace=true

[dev-dependencies]
tempfile.workspace=true
tokio.workspace=true
