[package]
name="quickfs-client-core"
version.workspace=true
edition.workspace=true
license.workspace=true
publish.workspace=true
[dependencies]
async-trait.workspace=true
futures.workspace=true
hex.workspace=true
rustix.workspace=true
rustls.workspace=true
serde.workspace=true
serde_json.workspace=true
thiserror.workspace=true
tokio.workspace=true
getrandom = "0.4"
uuid.workspace=true
zeroize.workspace=true
quickfs-auth={path="../auth"}
quickfs-cache={path="../cache"}
quickfs-protocol={path="../protocol"}
quickfs-transport-quic={path="../transport-quic"}
[lints]
workspace=true

[dev-dependencies]
tempfile.workspace=true
