[package]
name = "quickfs-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
[dependencies]
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true
zstd.workspace = true
[lints]
workspace = true
