[package]
name="quickfs-server-core"
version.workspace=true
edition.workspace=true
license.workspace=true
publish.workspace=true
[dependencies]
dashmap.workspace=true
sha2.workspace=true
thiserror.workspace=true
tokio.workspace=true
uuid.workspace=true
quickfs-common={path="../common"}
quickfs-protocol={path="../protocol"}
[dev-dependencies]
tempfile.workspace=true
[lints]
workspace=true

