[package]
name="quickfs-server-core"
version.workspace=true
edition.workspace=true
license.workspace=true
publish.workspace=true
[dependencies]
dashmap.workspace=true
base64 = "0.22"
rustix={ workspace=true, features=["fs"] }
sha2.workspace=true
hex.workspace=true
serde.workspace=true
serde_json.workspace=true
thiserror.workspace=true
tokio.workspace=true
uuid.workspace=true
quickfs-common={path="../common"}
quickfs-protocol={path="../protocol"}
[dev-dependencies]
tempfile.workspace=true
[lints]
workspace=true
