[package]
name="quickfs-transport-quic"
version.workspace=true
edition.workspace=true
license.workspace=true
publish.workspace=true
[dependencies]
bytes.workspace=true
quinn.workspace=true
rustls.workspace=true
rustls-platform-verifier.workspace=true
serde.workspace=true
sha2.workspace=true
thiserror.workspace=true
tokio.workspace=true
uuid.workspace=true
zeroize.workspace=true
quickfs-protocol={path="../protocol"}
[lints]
workspace=true

[dev-dependencies]
tempfile.workspace=true
