[package]
name="quickfs-server-daemon"
version.workspace=true
edition.workspace=true
license.workspace=true
publish.workspace=true
[dependencies]
anyhow.workspace=true
clap.workspace=true
hex.workspace=true
futures.workspace=true
serde.workspace=true
rpassword.workspace=true
tokio.workspace=true
toml.workspace=true
tracing.workspace=true
uuid.workspace=true
zeroize.workspace=true
quickfs-auth={path="../../../crates/auth"}
quickfs-common={path="../../../crates/common"}
quickfs-protocol={path="../../../crates/protocol"}
quickfs-server-core={path="../../../crates/server-core"}
quickfs-transport-quic={path="../../../crates/transport-quic"}
[lints]
workspace=true

[dev-dependencies]
quickfs-client-core={path="../../../crates/client-core"}
rcgen.workspace=true
tempfile.workspace=true
